# goa2-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  README.md  design.md  deterministic_rules.md  implementation_status.md  pyproject.toml  verify_hero_effects.py
.github/workflows/: ci.yml
data/maps/: test_map.json
docs/: CLIENT_INTEGRATION_GUIDE.md  CLIENT_READINESS_ROADMAP.md  CODEBASE_MAP.md  EFFECT_AUTHOR_REFERENCE.md  TODO.md  TOPOLOGY_IMPLEMENTATION_PLAN.md  WASP_IMPLEMENTATION_GUIDE.md  architecture-effect-system-plan.md  audit_claims_tracker.md  card_effects_guidelines.md  character_effect_testing_strategy_plan.md  effect-system-implementation-checklist.md  effect_authoring_improvements.md  plan_active_effects_system.md  plan_defense_effects.md  plan_modifier_to_activeeffect_migration.md  plan_passive_abilities_system.md  plan_unique_id_system.md  refactor_plan_entity_manager.md  state_synchronization_issue.md
docs/heroes/: garrus_hld.md  min.md  nebkher.md  silverarrow_hld.md  trinkets_effect_reference.md
extracted_assets/: manual.md  manual_text_only.md
src/goa2/: main.py
tests/: test_active_effects.py  test_entity_registration.py  test_fast_travel.py  test_unique_id_system.py
tests/domain/: test_board.py  test_card.py  test_card_masking.py  test_card_state.py  test_card_swap.py  test_card_validators.py  test_effect.py  test_events.py  test_hero_card_lifecycle.py  test_hex.py  test_marker.py  test_mid_turn_retrieval.py  test_models.py  test_modifier.py  test_played_cards_positions.py  test_spawn.py  test_state.py  test_token_model.py  test_topography.py  test_views.py  (+1 more)
(+314 files in other folders)
